EmailService structure added to system

--- a/EmailSystem/EmailSystem/appsettings.json
+++ b/EmailSystem/EmailSystem/appsettings.json
@@ -8,9 +8,9 @@
   "EmailConfiguration": {
     "From": "blckshark@yahoo.com",
     "SmtpServer": "smtp.gmail.com",
-    "Port": 465,
-    "UserName": "blckshark@yahoo.com",
-    "Password": ""
+    "Port": 587,
+    "UserName": "blackshark0005@gmail.com",
+    "Password": "blckshrk505"
   }
   "AllowedHosts": "*",
   "ConnectionStrings": {
