EmailConfiguration, EmailSender, Message classes added to system

--- a/EmailSystem/EmailSystem/appsettings.json
+++ b/EmailSystem/EmailSystem/appsettings.json
@@ -6,9 +6,9 @@
     }
   },
   "EmailConfiguration": {
-    "From": "blckshark@yahoo.com",
+    "From": "blackshark0005@gmail.com",
     "SmtpServer": "smtp.gmail.com",
-    "Port": 587,
+    "Port": 465,
     "UserName": "blackshark0005@gmail.com",
     "Password": "blckshrk505"
   }
