Add action completed

--- a/EmailSystem/EmailSystem/appsettings.json
+++ b/EmailSystem/EmailSystem/appsettings.json
@@ -6,12 +6,12 @@
     }
   },
   "EmailConfiguration": {
-    "From": "blackshark0005@gmail.com",
+    "From": "aslanrh@code.edu.az",
     "SmtpServer": "smtp.gmail.com",
     "Port": 465,
-    "UserName": "blackshark0005@gmail.com",
-    "Password": "blckshrk505"
-  }
+    "UserName": "aslanrh@code.edu.az",
+    "Password": "paviliong6"
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ROG": "Server=LAPTOP-KU9654JN;Database=Email-Data;Trusted_Connection=True;TrustServerCertificate=True;"
