--- a/EmailSystem/EmailSystem/appsettings.json
+++ b/EmailSystem/EmailSystem/appsettings.json
@@ -6,11 +6,11 @@
     }
   },
   "EmailConfiguration": {
-    "From": "aslanrh@code.edu.az",
+    "From": "blackshark0005@gmail.com",
     "SmtpServer": "smtp.gmail.com",
     "Port": 465,
-    "UserName": "aslanrh@code.edu.az",
-    "Password": "paviliong6"
+    "UserName": "blackshark0005@gmail.com",
+    "Password": "blckshrk505"
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
